tests/ui_fail/free_conn.stderr
error[E0505]: cannot move out of `env` because it is borrowed
  --> $DIR/free_conn.rs:18:5
   |
15 |     let (conn, _) = SQLHDBC::SQLAllocHandle(&env);
   |                                             ---- borrow of `env` occurs here
...
18 |     env.SQLFreeHandle();
   |     ^^^ move out of `env` occurs here
19 |     conn.SQLFreeHandle();
   |     ---- borrow later used here
